# PoetryTestSelection

./: README.md  pyproject.toml
ex1/: b.py  not_test.py  tests.py
ex2/: d.py
succeed/: pytest.ini
succeed/ex1/: a.py  not_test.py  test_not.py  tests.py
succeed/ex2/: c.py  e.py
