[tool.poetry]
name = "poetrytestselection"
version = "0.1.0"
description = "Demonstrates selecting alternate file and function names for Pytest within Poetry"
authors = ["Bruce Eckel <mindviewinc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
